# imx-pins

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imx-pins.py
pinsettings/: imx6ul.json  imx6ull.json  imx8mm.json
src/: CMakeLists.txt  Fl_Button_Tree.cxx  Fl_Button_Tree.hxx  Fl_Button_Tree_Item.cxx  Fl_Button_Tree_Item.hxx  PinSettings.cxx  PinSettings.hxx  imx-pins.cxx  imx-pins.hxx
